# ml-ci-labs_ml-ci-action

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  PAYLOAD_SCHEMA.md  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  self-test-pr.yml
docs/: launch-copy.md  reference.md  release-checklist.md
examples/artifact-consumption/.github/workflows/: ml-ci.yml
examples/config-advanced/: .ml-ci.yml
examples/config-advanced/.github/workflows/: ml-ci.yml
examples/config-minimal/: .ml-ci.yml
examples/config-minimal/.github/workflows/: ml-ci.yml
examples/cross-validation/.github/workflows/: ml-ci.yml
examples/pytorch-classification/.github/workflows/: ml-ci.yml
examples/sklearn-regression/.github/workflows/: ml-ci.yml
scripts/: use_local_action_runtime.py
src/: main.py  version.py
src/reporters/: model_card.py  pr_comment.py
src/utils/: app_client.py  app_payload.py  metrics.py  policy.py  stats.py
src/validators/: data_validator.py  model_validator.py
tests/: test_action_metadata.py  test_app_client.py  test_app_payload.py  test_data_validator.py  test_examples.py  test_main.py  test_metrics.py  test_model_card.py  test_model_validator.py  test_policy.py  test_pr_comment.py  test_stats.py
tests/fixtures/: baseline_metrics.json  baseline_metrics_with_observations.json  current_metrics.json  current_metrics_with_observations.json  regressed_metrics.json  regressed_metrics_with_observations.json  sample_baseline_data.csv  sample_data.csv
