[project]
name = "ml-ci-action"
version = "0.2.1"
description = "GitHub-native ML validation for pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface-hub>=0.20.0",
  "jinja2>=3.1.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "requests>=2.31.0",
  "scipy>=1.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = ["dev"]
package = false
